tests/should_pass/test_basic_structs.skj
struct Point {
    x: f32,
    y: f32
}

struct Line {
    start: Point,
    end: Point
}

fn main() -> IO<void> {
    let p: Line = Line {
        start: Point { x: 1.0, y: 1.0 },
        end: Point {x : 2.5, y: 3.1}
    };
    
    return do {
        print(float2str(p.start.x) :: ", " :: float2str(p.end.y));
    };
}
