tests/should_fail/test_io_outside_monad.skj
fn main() -> i32 {
    print("Hello world!");
    return 1;
}